# api/cmd/api/model.go
@@ -1,18 +1,0 @@
-package main
-
-import "github.com/tetrago/motmot/api/.gen/motmot/public/model"
-
-type GroupModel struct {
-	ID   int64  `json:"id"`
-	Name string `json:"name"`
-}
-
-type UserModel struct {
-	Identifier  string       `json:"identifier"`
-	DisplayName string       `json:"display_name"`
-	Groups      []GroupModel `json:"groups"`
-}
-
-func MapToGroupModel(x model.Room, _ int) GroupModel {
-	return GroupModel{x.ID, x.Name}
-}
