# api/docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/auth/login": {
             "post": {
-                "description": "Loging to user and authenticate with the backend",
+                "description": "Log in to user and authenticate with the backend",
                 "produces": [
                     "application/json"
                 ],
@@ -21,7 +21,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.loginRequest"
+                            "$ref": "#/definitions/main.authLoginRequest"
                         }
                     }
                 ],
@@ -29,7 +29,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.loginResponse"
+                            "$ref": "#/definitions/main.authLoginResponse"
                         }
                     },
                     "400": {
@@ -58,7 +58,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.renewStruct"
+                            "$ref": "#/definitions/main.authRenewRequest"
                         }
                     }
                 ],
@@ -66,7 +66,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.renewStruct"
+                            "$ref": "#/definitions/main.authRenewResponse"
                         }
                     },
                     "400": {
@@ -74,6 +74,74 @@
                     },
                     "500": {
                         "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/course/department/{dep}": {
+            "get": {
+                "description": "Queries for all UF courses in a three-letter department prefix",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "course"
+                ],
+                "summary": "Get courses in department",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Three-letter department prefix",
+                        "name": "dep",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "503": {
+                        "description": "Service Unavailable"
+                    }
+                }
+            }
+        },
+        "/course/group/{dep}/{code}": {
+            "get": {
+                "description": "Gets (or creates) group of specified course",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "course"
+                ],
+                "summary": "Get group of specified course",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Three-letter department prefix",
+                        "name": "dep",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Four-digit course code",
+                        "name": "code",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    },
+                    "503": {
+                        "description": "Service Unavailable"
                     }
                 }
             }
@@ -94,9 +162,81 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/main.GroupModel"
+                                "$ref": "#/definitions/main.groupAllResponseItem"
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/group/get/{id}": {
+            "get": {
+                "description": "Gets group information",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "group"
+                ],
+                "summary": "Get group",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Group ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.groupGetResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/user/Register": {
+            "post": {
+                "description": "Registers a new user given the provided arguments",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Register a new user",
+                "parameters": [
+                    {
+                        "description": "User registration information",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.userRegisterRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/main.userRegisterResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -127,44 +267,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.UserModel"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
-        "/user/register": {
-            "post": {
-                "description": "Registers a new user given the provided arguments",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "Register a new user",
-                "parameters": [
-                    {
-                        "description": "User registration information",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.registerRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/main.UserModel"
+                            "$ref": "#/definitions/main.userGetResponse"
                         }
                     },
                     "400": {
@@ -178,35 +281,7 @@
         }
     },
     "definitions": {
-        "main.GroupModel": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "main.UserModel": {
-            "type": "object",
-            "properties": {
-                "display_name": {
-                    "type": "string"
-                },
-                "groups": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/main.GroupModel"
-                    }
-                },
-                "identifier": {
-                    "type": "string"
-                }
-            }
-        },
-        "main.loginRequest": {
+        "main.authLoginRequest": {
             "type": "object",
             "properties": {
                 "ident": {
@@ -217,7 +292,7 @@
                 }
             }
         },
-        "main.loginResponse": {
+        "main.authLoginResponse": {
             "type": "object",
             "properties": {
                 "token": {
@@ -225,7 +300,73 @@
                 }
             }
         },
-        "main.registerRequest": {
+        "main.authRenewRequest": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.authRenewResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.groupAllResponseItem": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.groupGetResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.userGetResponse": {
+            "type": "object",
+            "properties": {
+                "display_name": {
+                    "type": "string"
+                },
+                "groups": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.userGetResponseGroup"
+                    }
+                },
+                "ident": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.userGetResponseGroup": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.userRegisterRequest": {
             "type": "object",
             "properties": {
                 "display_name": {
@@ -239,10 +380,10 @@
                 }
             }
         },
-        "main.renewStruct": {
+        "main.userRegisterResponse": {
             "type": "object",
             "properties": {
-                "token": {
+                "ident": {
                     "type": "string"
                 }
             }
